--- a/sred/scientific-research-experimental-development-tax-incentive-program/support/first-time-claimant-advisory-service.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/support/first-time-claimant-advisory-service.html
@@ -90,7 +90,7 @@
 <div class="clearfix"></div>
 	
 <h2 class="mrgn-tp-md">Service summary</h2>
-<p>The First-Time Claimant Advisory Service (FTCAS) is a mandatory virtual service that provides you with recommendations and guidance to  support your future claims. </p>
+	<p>The First-Time Claimant Advisory Service (FTCAS) is a <strong>mandatory</strong> virtual service for selected claimants that provides recommendations and guidance to support future claims. </p>
 <p>If it is your first SR&amp;ED claim or you haven&rsquo;t filed a  claim in the last 3 years, you may be selected for FTCAS. The service is only available after you have submitted a claim. </p>
 <p>The service provides advice on:</p>
 <ul>
@@ -102,7 +102,7 @@
 <p>If you are selected for the First-Time Claimant Advisory Service, you will be contacted by phone to schedule a meeting.</p>
 <h2>What to expect  </h2>
 <p>During the online meeting, officers from the SR&amp;ED program will  discuss your current project(s) and SR&amp;ED&nbsp;work, and provide you with an  information session tailored to your business.</p>
-<p>After the meeting, you will receive a report containing a summary, recommendations and guidance for your SR&amp;ED work and related expenditures, and advice on how to prepare future claims.</p>
+<p>After the meeting, you will receive a report containing a summary, recommendations, and guidance for your SR&amp;ED work and related expenditures, as well as advice on how to prepare future claims.</p>
 <p>The service is not a review of your claim. No determinations of work eligibility or expenditures will be made. If a refund is expected, it will  be processed after the meeting.</p>
 </div>
 </div>
